tweaked buttons sizes on smaller devices mango-is-website/issues#89

--- a/src/core/_buttons.css
+++ b/src/core/_buttons.css
@@ -4,15 +4,13 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
   display: inline-block;
-  height: 2.75rem;
-  padding: 0 2rem;
+  padding: 0 1rem;
   color: var(--button-font-color);
   text-align: center;
-  font-size: 1.3rem;
+  font-size: .8rem;
   font-weight: 400;
-  line-height: 2.75rem;
+  line-height: 1.6rem;
   text-decoration: none;
-  white-space: nowrap;
   background-color: var(--button-background-color);
   border-radius: var(--border-radius);
   border: var(--button-border);
@@ -23,6 +21,35 @@ input[type="button"] {
   -o-transition: border 0.2s;
   transition: border 0.2s;
 }
+
+@media (min-width: 720px) {
+  /* Larger than tablet */
+	.button,
+	button,
+	input[type="submit"],
+	input[type="reset"],
+	input[type="button"] {
+	  font-size: 1rem;
+	}
+}
+
+@media (min-width: 960px) {
+  /* Larger than desktop */
+  
+	.button,
+	button,
+	input[type="submit"],
+	input[type="reset"],
+	input[type="button"] {
+	  height: 2.75rem;
+	  padding: 0 1.6rem;
+	  font-size: 1.2rem;
+	  line-height: 2.75rem;
+	  white-space: nowrap;
+	}
+}
+
+
 
 .button:hover,
 button:hover,
